# shane-skills

./: .gitignore  README.md  pyproject.toml
openspec/changes/cli-tools-integration/: design.md  proposal.md  tasks.md
openspec/changes/cli-tools-integration/specs/cli-skills/: spec.md
openspec/changes/cli-tools-integration/specs/confluence-cli/: spec.md
openspec/changes/cli-tools-integration/specs/jira-cli/: spec.md
openspec/changes/cli-tools-integration/specs/oracle-db/: spec.md
openspec/changes/cli-tools-integration/specs/settings-gui/: spec.md
openspec/changes/cli-tools-integration/specs/web-fetch/: spec.md
skills/agents/: automation.agent.md  code-review.agent.md  graph-rag.agent.md  graphify-extractor.agent.md  jdk-upgrade.agent.md
skills/skills/browser/: SKILL.md
skills/skills/confluence/: SKILL.md
skills/skills/db/: SKILL.md
skills/skills/graph-build/: skill.md
skills/skills/graph-query/: skill.md
skills/skills/jira/: SKILL.md
skills/skills/python/: SKILL.md
skills/skills/web/: SKILL.md
src/shane_skills/: __init__.py  cli.py  config.py  init_cmd.py
src/shane_skills/gui/: settings_app.py  settings_tui.py
src/shane_skills/integrations/: confluence_client.py  db_client.py  jira_client.py  web_client.py
tests/: conftest.py  test_cli.py  test_config.py  test_confluence_client.py  test_db_client.py  test_init_cmd.py  test_jira_client.py  test_web_client.py
